# imx6ull_SmartCompanion

./: BotDemo.code-workspace  README.md
AIChat/Client/: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
AIChat/Client/Interface/: AIChatInterface.cc  AIChatInterface.h  CMakeLists.txt
AIChat/Client/inc/: Achieve.h  Audio.h  Log.h  StateMachine.h  WebsocketHandle.h  WebsocketHandler.h
AIChat/Client/src/: Achieve.cc  Audio.cc  StateMachine.cc  WebsocketHandle.cc  WebsocketHandler.cc  main.cc
AIChat/Server/: AudioProcessor.py  MessageHandler.py  ModelManager.py  README.md  WebsocketServer.py  main.py  requirements.txt
AIChat/Server/FunAudioLLM/iic/speech_fsmn_vad_zh-cn-16k-common-pytorch/: model.pt
AIChat/Server/fasttext/: cutdata.py  fasttext_wheel-0.9.2-cp310-cp310-win_amd64.whl  test.py  train.py
AIChat/Server/fasttext/data/: cutdata.txt  data.txt
AIChat/Server/fasttext/model/: classify.model
DeskBot/: CMakeLists.txt  README.md  lv_conf.h  main.c  toolchain.cmake
DeskBot/common/: CMakeLists.txt
DeskBot/common/sys_manager/: sys_manager.c  sys_manager.h
DeskBot/conf/: dev_conf.h  version.h
DeskBot/gui_app/: CMakeLists.txt  ui.c  ui.h
DeskBot/gui_app/common/: codeblock_use.h
DeskBot/gui_app/common/animation/: lv_lib_animation.c  lv_lib_animation.h
DeskBot/gui_app/common/others/: lv_lib_template.c  lv_lib_template.h
DeskBot/gui_app/common/page_manager/: Func_PageManager.c  Func_PageManager.h
DeskBot/gui_app/fonts/: ui_font_HeiTi72.c  ui_font_MuYu44.c  ui_font_heiti24.c  ui_icon_HomeWifi40.c  ui_icon_HumiAndWind72.c
DeskBot/gui_app/images/: UI_Img_AIChatHand120.c  UI_Img_AIChatQuestion120.c  UI_Img_AIChatThink120.c  UI_Img_Home1.c  UI_Img_Home2.c  UI_Img_Home3.c  UI_Img_Home4.c  UI_Img_Home5.c  UI_Img_Home6.c  UI_Img_Home7.c  UI_Img_Home8.c  UI_Img_Muyu.c  UI_Img_WeatherCloud.c  UI_Img_WeatherRain.c  UI_Img_WeatherSun.c
DeskBot/gui_app/pages/UI_A_HomePage/: UI_A_HomePage.c  UI_A_HomePage.h
DeskBot/gui_app/pages/UI_B_BotPage/: UI_B_BotPage.c  UI_B_BotPage.h
DeskBot/gui_app/pages/UI_C_WeatherPage/: UI_C_WeatherPage.c  UI_C_WeatherPage.h
DeskBot/gui_app/pages/UI_D_DrawPage/: UI_D_DrawPage.c  UI_D_DrawPage.h
DeskBot/gui_app/pages/UI_E_CalculatorPage/: UI_E_CalculatorPage.c  UI_E_CalculatorPage.h
DeskBot/gui_app/pages/UI_F_MuyuPage/: UI_F_MuyuPage.c  UI_F_MuyuPage.h
DeskBot/gui_app/pages/UI_G_DigitPage/: UI_G_DigitPage.c  UI_G_DigitPage.h
DeskBot/gui_app/pages/UI_H_TwoPage/: UI_H_TwoPage.c  UI_H_TwoPage.h
DeskBot/gui_app/pages/UI_I_YoloPage/: UI_I_YoloPage.c
DeskBot/gui_app/pages/UI_J_SetPage/: UI_J_SetPage.c  UI_J_SetPage.h
DeskBot/utils/: CMakeLists.txt  gaode_adcode.json  system_para.conf
